# osu-data-query

./: Cargo.toml  LICENSE  README.md
osu_query/: Cargo.toml
osu_query/src/: beatmaps.rs  lib.rs  prelude.rs  requester.rs  user.rs  utils.rs
osu_tg_bot/: Cargo.toml
osu_tg_bot/src/: main.rs
query_cli/: Cargo.toml
query_cli/src/: config.rs  main.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: beatmaps.rs  config.rs  lib.rs  main.rs  prelude.rs  requester.rs  response.rs  user.rs  utils.rs
