[package]
name = "osu_tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.5", features = ["macros", "auto-send"] }
lazy_static = "1.4.0"
anyhow = "1.0"
pretty_env_logger = "0.4.0"
log = "0.4"
confy = "0.4.0"

osu_query = { path = "../osu_query" }
