[package]
name = "query_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
structopt = "0.3"
tabled = "0.3.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"

osu_query = { path = "../" }
